[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Matthew <the10thwiz@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
num-bigint = { version = "0.3", features = ["rand"] }
rayon = "1.5.1"
termion = "1.5"
sha = "1.0.3"
md4 = "0.9.0"
block-buffer = "0.9.0"
digest = { version = "0.9", features = ["dev"] }
lazy_static = "1.4.0"

[features]
default = ["std"]
std = ["digest/std"]

